Timer now displaying on presentation mode but gets covered up by the presentation.  Fixes planned!

--- a/client/res/styles.css
+++ b/client/res/styles.css
@@ -324,6 +324,13 @@ hr {
   opacity: 1;
 }
 
+.timer {
+  font-size: 6em;
+  font-family: monospace;
+  color: red;
+  line-height: 0;
+}
+
 .clickable {
   cursor: pointer;
   color: #141E25;
